Fix builtin component registration and eval examples
  Fixed the builtin component registration system to properly resolve URLs like
  'builtins://eval' by correcting the component lookup logic. The issue was a
  mismatch between how components were registered and how they were looked up.

  Changes to component registration:
  - Updated registry.register() to accept Option<&'static str> for host parameter
  - Fixed component registration to use Some("component_name") for host
  - Fixed get_component() to use the correct lookup key (component.host(), component.path())

  Fixed eval examples to use correct workflow syntax:
  - Changed 'args' to 'input' for step inputs
  - Changed 'outputs' to 'output' (singular) for workflow outputs
  - Fixed output references to use { $from: { step: step_id }, path: "field" }
  - Added $literal wrapper for inline workflow definitions in eval component

  Updated examples/eval/ directory:
  - simple-eval.yaml: Now correctly demonstrates basic eval component usage
  - test-builtins.yaml: Tests the create_messages builtin component
  - math-eval.yaml: Fixed syntax, added Python plugin config (requires Python SDK)
  - stepflow-config.yml: Added Python plugin configuration
  - README.md: Updated with correct syntax, troubleshooting guide, and examples

  All builtin component tests pass and the eval component now properly executes
  nested workflows.

--- a/examples/eval/math-eval.yaml
+++ b/examples/eval/math-eval.yaml
@@ -10,20 +10,21 @@ input_schema:
 steps:
   - id: nested_math
     component: "builtins://eval"
-    args:
+    input:
       workflow:
-        name: "Nested Math Workflow"
-        steps:
-          - id: compute_sum
-            component: python://add
-            args:
-              a: { $from: "$input", path: "x" }
-              b: { $from: "$input", path: "y" }
-        outputs:
-          sum_result: { $from: "compute_sum", path: "result" }
+        $literal:
+          name: "Nested Math Workflow"
+          steps:
+            - id: compute_sum
+              component: python://add
+              input:
+                a: { $from: { workflow: input }, path: "x" }
+                b: { $from: { workflow: input }, path: "y" }
+          output:
+            sum_result: { $from: { step: compute_sum }, path: "result" }
       input:
         x: 5
         y: 3
 
-outputs:
-  math_result: { $from: "nested_math", path: "result" }
+output:
+  math_result: { $from: { step: nested_math }, path: "result" }
