--- a/examples/eval/simple-eval.yaml
+++ b/examples/eval/simple-eval.yaml
@@ -4,14 +4,14 @@ description: "Basic test of the eval builtin component"
 steps:
   - id: test_eval
     component: "builtins://eval"
-    args:
+    input:
       workflow:
-        name: "Simple Nested Workflow"
-        steps: []
-        outputs:
-          test_result: 
-            literal: "Hello from nested workflow!"
+        $literal:
+          name: "Simple Nested Workflow"
+          steps: []
+          output:
+            test_result: "Hello from nested workflow!"
       input: {}
 
-outputs:
-  result: { $from: "test_eval", path: "result" }
+output:
+  result: { $from: { step: test_eval }, path: "result" }
