--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ hex = "0.4"
 indexmap = { version = "2.8.0", features = ["serde"] }
 insta = { version = "1.34.0", features = ["glob", "yaml" ] }
 openai-api-rs = "6.0.6"
+regex = "1.11.1"
+walkdir = "2.5.0"
 safer_owning_ref = "0.5.0"
 schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
