--- a/crates/stepflow-main/Cargo.toml
+++ b/crates/stepflow-main/Cargo.toml
@@ -19,6 +19,8 @@ stepflow-execution.workspace = true
 stepflow-mock.workspace = true
 stepflow-plugin.workspace = true
 stepflow-protocol.workspace = true
+regex.workspace = true
+walkdir.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
@@ -29,9 +31,12 @@ url.workspace = true
 serde.workspace = true
 serde_yml.workspace = true
 stepflow-protocol.workspace = true
-insta.workspace = true
 tracing-error.workspace = true
 tracing-subscriber.workspace = true
+
+[[bin]]
+name = "stepflow"
+path = "src/main.rs"
 
 [lints]
 workspace = true
