test: Fix tests and update outputs
- Change YAML library for better support.
- Fix `cargo test` to fail if tests fail.
- Fix the stepflow-config for python tests.
- Fix the outputs of python tests.

--- a/crates/stepflow-main/Cargo.toml
+++ b/crates/stepflow-main/Cargo.toml
@@ -12,7 +12,7 @@ clap.workspace = true
 error-stack.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_yml.workspace = true
+serde_yaml_ng.workspace = true
 stepflow-builtins.workspace = true
 stepflow-core.workspace = true
 stepflow-execution.workspace = true
@@ -24,15 +24,11 @@ walkdir.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+tracing-error.workspace = true
 tracing-subscriber.workspace = true
 url.workspace = true
 
 [dev-dependencies]
-serde.workspace = true
-serde_yml.workspace = true
-stepflow-protocol.workspace = true
-tracing-error.workspace = true
-tracing-subscriber.workspace = true
 
 [[bin]]
 name = "stepflow"
