--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ safer_owning_ref = "0.5.0"
 schemars = { version = "0.8.22", features = ["indexmap2", "impl_json_schema", "url"] }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
 serde_json = { version = "1.0.140", features = ["preserve_order", "raw_value"] }
-serde_yml = "0.0.12"
+serde_yaml_ng = "0.10.0"
 sha2 = "0.10"
 similar = "2.7.0"
 similar-asserts = { version = "1.7.0", features = ["serde" ] }
