--- a/crates/stepflow-core/Cargo.toml
+++ b/crates/stepflow-core/Cargo.toml
@@ -14,7 +14,7 @@ safer_owning_ref.workspace = true
 schemars.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_yml.workspace = true
+serde_yaml_ng.workspace = true
 sha2.workspace = true
 thiserror.workspace = true
 url.workspace = true
