--- a/tests/python/custom_component_function.yaml
+++ b/tests/python/custom_component_function.yaml
@@ -16,73 +16,72 @@ output_schema:
     analytics:
       type: object
 steps:
-  - id: analyze_scores
-    component: python://custom_component
+- id: analyze_scores
+  component: python://custom_component
+  input_schema: null
+  output_schema: null
+  input:
+    input_schema:
+      type: object
+      properties:
+        data:
+          type: array
+          items:
+            type: object
+            properties:
+              name:
+                type: string
+              score:
+                type: number
+      required:
+      - data
+    code: "def analyze_scores(data):\n    scores = [item['score'] for item in data['data']]\n    \n    if not scores:\n        return {\n            'count': 0,\n            'average': 0,\n            'min': 0,\n            'max': 0,\n            'top_performer': None\n        }\n    \n    average = sum(scores) / len(scores)\n    min_score = min(scores)\n    max_score = max(scores)\n    \n    # Find top performer\n    top_performer = None\n    for item in data['data']:\n        if item['score'] == max_score:\n            top_performer = item['name']\n            break\n    \n    return {\n        'count': len(scores),\n        'average': round(average, 2),\n        'min': min_score,\n        'max': max_score,\n        'top_performer': top_performer\n    }\n"
+    function_name: analyze_scores
     input:
-      input_schema:
-        type: object
-        properties:
-          data:
-            type: array
-            items:
-              type: object
-              properties:
-                name: { type: string }
-                score: { type: number }
-        required: [data]
-      code: |
-        def analyze_scores(data):
-            scores = [item['score'] for item in data['data']]
-            
-            if not scores:
-                return {
-                    'count': 0,
-                    'average': 0,
-                    'min': 0,
-                    'max': 0,
-                    'top_performer': None
-                }
-            
-            average = sum(scores) / len(scores)
-            min_score = min(scores)
-            max_score = max(scores)
-            
-            # Find top performer
-            top_performer = None
-            for item in data['data']:
-                if item['score'] == max_score:
-                    top_performer = item['name']
-                    break
-            
-            return {
-                'count': len(scores),
-                'average': round(average, 2),
-                'min': min_score,
-                'max': max_score,
-                'top_performer': top_performer
-            }
-      function_name: analyze_scores
-      input:
-        data: { $from: { workflow: input }, path: data }
+      data:
+        $from:
+          workflow: input
+        path: data
 output:
-  analytics: { $from: { step: analyze_scores }, path: result }
+  analytics:
+    $from:
+      step: analyze_scores
+    path: result
 test:
   cases:
-    - name: "analyze scores for Alice, Bob, Charlie, Diana"
-      input:
-        data:
-          - name: "Alice"
-            score: 85
-          - name: "Bob"
-            score: 92
-          - name: "Charlie"
-            score: 78
-          - name: "Diana"
-            score: 96
-    - name: "analyze scores for Eve and Frank"
-      input:
-        data:
-          - name: "Eve"
-            score: 100
-          - name: "Frank"
-            score: 88
+  - name: analyze scores for Alice, Bob, Charlie, Diana
+    input:
+      data:
+      - name: Alice
+        score: 85
+      - name: Bob
+        score: 92
+      - name: Charlie
+        score: 78
+      - name: Diana
+        score: 96
+    output:
+      outcome: success
+      result:
+        analytics:
+          average: 87.75
+          count: 4
+          max: 96
+          min: 78
+          top_performer: Diana
+  - name: analyze scores for Eve and Frank
+    input:
+      data:
+      - name: Eve
+        score: 100
+      - name: Frank
+        score: 88
+    output:
+      outcome: success
+      result:
+        analytics:
+          average: 94.0
+          count: 2
+          max: 100
+          min: 88
+          top_performer: Eve
