--- a/crates/stepflow-state/Cargo.toml
+++ b/crates/stepflow-state/Cargo.toml
@@ -1,24 +1,18 @@
 [package]
-name = "stepflow-execution"
+name = "stepflow-state"
 version.workspace = true
 authors.workspace = true
 edition.workspace = true
 license.workspace = true
 publish = false
-description = "Execution logic for workflows."
+description = "State management for workflow execution"
 
 [dependencies]
 error-stack.workspace = true
-futures.workspace = true
-safer_owning_ref.workspace = true
 serde_json.workspace = true
-stepflow-plugin.workspace = true
 stepflow-core.workspace = true
-stepflow-state.workspace = true
 thiserror.workspace = true
 tokio.workspace = true
-tracing.workspace = true
-uuid.workspace = true
 
 [lints]
 workspace = true
