feat: Bidirectional protocol and support for blobs
- Introduces a `Context` available to Python components
- Supports calls from component server to the runtime
- python blob access in custom components; e2e test

--- a/tests/builtins/blob_test.yaml
+++ b/tests/builtins/blob_test.yaml
@@ -11,8 +11,8 @@ output_schema:
     retrieved_data:
       type: object
 steps:
-- id: create_blob
-  component: builtins://create_blob
+- id: put_blob
+  component: builtins://put_blob
   input_schema: null
   output_schema: null
   input:
@@ -27,12 +27,12 @@ steps:
   input:
     blob_id:
       $from:
-        step: create_blob
+        step: put_blob
       path: blob_id
 output:
   blob_id:
     $from:
-      step: create_blob
+      step: put_blob
     path: blob_id
   retrieved_data:
     $from:
